# lib_pq

./: .gitignore  CMakeLists.txt  README  README.md
cmake/: FindExtProject.cmake  GenDef.cmake  PackageConfig.cmake.in  RegressCheck.cmake  configure.cmake  util.cmake
opt/: folders.csv
src/: CMakeLists.txt
src/backend/utils/mb/: wchar.c
src/include/: c.h  pg_config_cmake.in
src/interfaces/libpq/: CMakeLists.txt  exports.txt  fe-exec.c
src/port/: chklocale.c
